--- a/index.html
+++ b/index.html
@@ -7,34 +7,61 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>
-      Jonathan Countdown <br /><br />
-      (Bar will get filled progressively as time goes by)
-    </h1>
+    <h1>Jonathan Countdown</h1>
 
-    <div class="progress-container">
-      <span class="date-mark start">23/09/2024</span>
-      <div class="progress-bar" id="progress-bar"></div>
-      <span class="date-mark end">23/09/2025</span>
+    <div class="radial-container">
+      <svg class="radial-svg" viewBox="0 0 300 300" aria-hidden="true">
+        <defs>
+          <linearGradient id="progressGradient" x1="1" y1="0" x2="0" y2="1">
+            <stop offset="0%" stop-color="#d99a4e" />
+            <stop offset="100%" stop-color="#7dae8d" />
+          </linearGradient>
+        </defs>
+
+        <!-- background circle -->
+        <circle
+          class="radial-bg"
+          cx="150"
+          cy="150"
+          r="140"
+          fill="none"
+          stroke="#3e332f"
+          stroke-width="20"
+        />
+
+        <!-- animated progress circle -->
+        <circle
+          class="radial-bar"
+          cx="150"
+          cy="150"
+          r="140"
+          fill="none"
+          stroke="url(#progressGradient)"
+          stroke-width="20"
+          stroke-linecap="round"
+          stroke-dasharray="879.6459430051424"
+          stroke-dashoffset="879.6459430051424"
+        />
+
+        <!-- markers at 3,6,9,12 months -->
+        <g
+          class="radial-markers"
+          fill="#c9b19e"
+          font-family="Inter,sans-serif"
+          font-size="14"
+          text-anchor="middle"
+        >
+          <text x="150" y="30">3 M</text>
+          <text x="270" y="155">6 M</text>
+          <text x="150" y="280">9 M</text>
+          <text x="30" y="155">12 M</text>
+        </g>
+      </svg>
+
+      <!-- countdown text -->
+      <div id="countdown" class="radial-text"></div>
     </div>
-    <div class="markers">
-      <span class="marker"
-        >3 Months <br /><br />(Let him settle down for now)</span
-      >
-      <span class="marker"
-        >6 Months <br /><br />
-        (I think he might already be preparing next steps)</span
-      >
-      <span class="marker"
-        >9 Months <br /><br />
-        (Oh is he really still there?)</span
-      >
-      <span class="marker"
-        >12 Months <br /><br />
-        (Time is up)</span
-      >
-    </div>
-    <div id="countdown"></div>
+
     <script src="script.js"></script>
   </body>
 </html>
